viewport 추가 페이지별 html 생성 link연결

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,7 @@
 	<title>e효담</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
 	<meta name="title" content="e효담상조,A+라이프">
 	<meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
 	<meta name="description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
@@ -40,11 +41,11 @@
 		</h1>
 		<nav class="gnb">
 			<ul>
-				<li><a href="">회사소개</a></li>
-				<li><a href="">상품안내</a></li>
-				<li><a href="">주요고객사</a></li>
-				<li><a href="">이용후기</a></li>
-				<li><a href="">장례정보</a></li>
+				<li><a href="sub-introduce-greetings.html">회사소개</a></li>
+				<li><a href="sub-product.html">상품안내</a></li>
+				<li><a href="sub-customer.html">주요고객사</a></li>
+				<li><a href="sub-review-list.html">이용후기</a></li>
+				<li><a href="sub-funeral-search.html">장례정보</a></li>
 			</ul>
 		</nav>
 		<ul class="util">
@@ -139,60 +140,16 @@
 			<div class="customer-list con-wrap">
 				<div class="slick-container">
 					<ul class="slick-wrapper">
-						<li class="slick-slide"><img src="../../assets/images/logo/samsung.png" alt="삼성전자" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/kia.png" alt="기아자동차" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/kepco.png" alt="한국전력공사" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/01.png" alt="삼성전자" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/02.png" alt="기아자동차" /></li>
 						<li class="slick-slide"><img src="../../assets/images/logo/04.png" alt="롯데백화점" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/05.png" alt="LG디스플레이" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/06.png" alt="MetLife" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/07.png" alt="삼성SDI" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/08.png" alt="posco" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/09.png" alt="한국수력원자력" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/10.png" alt="lotte chemical" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/11.png" alt="IBK기업은행" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/12.png" alt="우리은행" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/13.png" alt="삼성증권" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/14.png" alt="세계속의 경기도" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/15.png" alt="한국서부발전|주|" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/16.png" alt="(주)대홍기획" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/17.png" alt="true 우riend" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/18.png" alt="CHUBB" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/19.png" alt="에스원" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/20.png" alt="한국무역협회" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/21.png" alt="한국남동발전" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/22.png" alt="롯데손해보험" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/23.png" alt="KEB하나은행" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/24.png" alt="동부생명" /></li>
 						<li class="slick-slide"><img src="../../assets/images/logo/25.png" alt="NAVER" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/26.png" alt="KRX 한국거래소" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/27.png" alt="KOMIPO 한국중부발전" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/28.png" alt="Lotte Card" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/29.png" alt="BCcard" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/30.png" alt="동부화재" /></li>
 						<li class="slick-slide"><img src="../../assets/images/logo/31.png" alt="KBS" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/32.png" alt="중앙선거관리위원회" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/33.png" alt="한국남부발전|주|" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/34.png" alt="한화생명" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/35.png" alt="수협" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/36.png" alt="HeungKuk Life Insurance" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/37.png" alt="KOREAN AIR" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/38.png" alt="한국조폐공사" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/39.png" alt="한전산업개발주식회사" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/40.png" alt="한화손해보험" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/41.png" alt="DGB생명" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/03.png" alt="한국전력공사" /></li>
 						<li class="slick-slide"><img src="../../assets/images/logo/42.png" alt="메리츠화재" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/08.png" alt="posco" /></li>
 						<li class="slick-slide"><img src="../../assets/images/logo/43.png" alt="사학연금" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/44.png" alt="대한적십자사" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/45.png" alt="한국전력기술|주|" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/46.png" alt="한화손해사정" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/47.png" alt="대신증권" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/48.png" alt="MG손해보험" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/49.png" alt="KMA한국능률협회" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/50.png" alt="GS건설" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/51.png" alt="한국전력전우회" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/52.png" alt="한화호텔&리조트" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/53.png" alt="수호천사동양생명" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/54.png" alt="ABL" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/11.png" alt="IBK기업은행" /></li>
 					</ul>
 				</div>
 			</div>
