--- a/src/html/sub-funeral-search.html
+++ b/src/html/sub-funeral-search.html
@@ -4,7 +4,8 @@
 <head>
     <title>장사시설검색|장례정보|e효담</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
     <meta name="title" content="장사시설검색|장례정보|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
     <meta name="description" content="전국 효담 장례 정보 안내 입니다.">
@@ -18,13 +19,11 @@
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/slick.css" />
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/sub.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="../js/slick.min.js"></script>
 </head>
 
 <body>
@@ -43,11 +42,11 @@
         </h1>
         <nav class="gnb">
             <ul>
-                <li><a href="">회사소개</a></li>
-                <li><a href="">상품안내</a></li>
-                <li><a href="">주요고객사</a></li>
-                <li><a href="">이용후기</a></li>
-                <li><a href="">장례정보</a></li>
+                <li><a href="sub-introduce-greetings.html">회사소개</a></li>
+                <li><a href="sub-product.html">상품안내</a></li>
+                <li><a href="sub-customer.html">주요고객사</a></li>
+                <li><a href="sub-review-list.html">이용후기</a></li>
+                <li><a href="sub-funeral-search.html">장례정보</a></li>
             </ul>
         </nav>
         <ul class="util">
@@ -67,20 +66,20 @@
                         <li class="depth depth1">
                             <button type="button">장례정보</button>
                             <ul class="depth-list">
-                                <li><a href="#">회사소개</a></li>
-                                <li><a href="#">상품안내</a></li>
-                                <li><a href="#">주요고객사</a></li>
-                                <li><a href="#">이용후기</a></li>
-                                <li class="active"><a href="#">장례정보</a></li>
+                                <li><a href="sub-introduce-greetings.html">회사소개</a></li>
+                                <li><a href="sub-product.html">상품안내</a></li>
+                                <li><a href="sub-customer.html">주요고객사</a></li>
+                                <li><a href="sub-review-list.html">이용후기</a></li>
+                                <li class="active"><a href="sub-funeral-search.html">장례정보</a></li>
                             </ul>
                         </li>
                         <li class="depth depth2">
                             <button type="button">장사시설검색</button>
                             <ul class="depth-list">
-                                <li class="active"><a href="#">장사시설검색</a></li>
-                                <li><a href="#">부고알림</a></li>
-                                <li><a href="#">사후행정절차</a></li>
-                                <li><a href="#">장례정보</a></li>
+                                <li class="active"><a href="sub-funeral-search.html">장사시설검색</a></li>
+                                <li><a href="sub-funeral-after.html">사후행정절차</a></li>
+                                <li><a href="sub-funeral-info.html">장례정보</a></li>
+                                <li><a href="sub-funeral-notice.html">부고알림</a></li>
                             </ul>
                         </li>
                     </ul>
