--- a/src/html/sub-funeral-info.html
+++ b/src/html/sub-funeral-info.html
@@ -2,29 +2,28 @@
 <html lang="ko">
 
 <head>
-    <title>이용후기|e효담</title>
+    <title>부고알림|장례정보|e효담</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="title" content="이용후기|e효담상조,A+라이프">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
+    <meta name="title" content="부고알림|장례정보|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
-    <meta name="description" content="e효담상조 회원님들의 이용후기 입니다.">
-    <meta property="og:title" content="이용후기|e효담상조,A+라이프">
-    <meta property="og:description" content="e효담상조 공지사항 페이지 입니다.">
+    <meta name="description" content="전국 효담 장례 정보 안내 입니다.">
+    <meta property="og:title" content="부고알림|장례정보|e효담상조,A+라이프">
+    <meta property="og:description" content="전국 효담 장례 정보 안내 입니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="이용후기|e효담상조,A+라이프">
-    <meta name="twitter:description" content="e효담상조 회원님들의 이용후기 입니다.">
-    <meta name="twitter:image" content="-">
+    <meta name="twitter:title" content="부고알림|장례정보|e효담상조,A+라이프">
+    <meta name="twitter:description" content="전국 효담 장례 정보 안내 입니다.">
+    <meta name="twitter:image" content="">
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/slick.css" />
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/sub.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="../js/slick.min.js"></script>
 </head>
 
 <body>
@@ -43,11 +42,11 @@
         </h1>
         <nav class="gnb">
             <ul>
-                <li><a href="">회사소개</a></li>
-                <li><a href="">상품안내</a></li>
-                <li><a href="">주요고객사</a></li>
-                <li><a href="">이용후기</a></li>
-                <li><a href="">장례정보</a></li>
+                <li><a href="sub-introduce-greetings.html">회사소개</a></li>
+                <li><a href="sub-product.html">상품안내</a></li>
+                <li><a href="sub-customer.html">주요고객사</a></li>
+                <li><a href="sub-review-list.html">이용후기</a></li>
+                <li><a href="sub-funeral-search.html">장례정보</a></li>
             </ul>
         </nav>
         <ul class="util">
@@ -56,22 +55,31 @@
         </ul>
     </header>
 
-    <main class="content-container review">
+    <main class="content-container funeral">
         <header class="visual">
             <div class="visual-wrap">
-                <h2>이용후기</h2>
-                <p>저희 효담을 이용하신 고객님들의 소중한 후기입니다.</p>
+                <h2>장례정보</h2>
+                <p>전국 효담 장례 정보 안내입니다.</p>
                 <nav class="lnb">
                     <ul class="con-wrap">
                         <li class="home"><a href="index.html">home</a></li>
                         <li class="depth depth1">
-                            <button type="button">이용후기</button>
+                            <button type="button">장례정보</button>
                             <ul class="depth-list">
-                                <li><a href="#">회사소개</a></li>
-                                <li><a href="#">상품안내</a></li>
-                                <li><a href="#">주요고객사</a></li>
-                                <li class="active"><a href="#">이용후기</a></li>
-                                <li><a href="#">장례정보</a></li>
+                                <li><a href="sub-introduce-greetings.html">회사소개</a></li>
+                                <li><a href="sub-product.html">상품안내</a></li>
+                                <li><a href="sub-customer.html">주요고객사</a></li>
+                                <li><a href="sub-review-list.html">이용후기</a></li>
+                                <li class="active"><a href="sub-funeral-search.html">장례정보</a></li>
+                            </ul>
+                        </li>
+                        <li class="depth depth2">
+                            <button type="button">부고알림</button>
+                            <ul class="depth-list">
+                                <li><a href="sub-funeral-search.html">장사시설검색</a></li>
+                                <li><a href="sub-funeral-after.html">사후행정절차</a></li>
+                                <li class="active"><a href="sub-funeral-info.html">장례정보</a></li>
+                                <li><a href="sub-funeral-notice.html">부고알림</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -80,36 +88,10 @@
         </header>
         <article class="contents con-wrap">
             <header class="con-header">
-                <h2>이용후기</h2>
+                <h2>부고알림</h2>
+                <p>고인의 마지막 가시는 길, 정성을 다하여 모실 것을 약속드립니다.</p>
             </header>
             <div class="con-body">
-                <article class="board-view">
-                    <header class="view-head">
-                        <h3>홍길동 회원님의 효담상조 이용후기</h3>
-                        <ul class="info">
-                            <li>2020.07.10</li>
-                            <li>조회수 293</li>
-                        </ul>
-                    </header>
-                    <div class="view-body">
-                        <div class="center">
-                            <img src="../../assets/images/thumb-boardview.jpg" alt="">
-                        </div>
-                    </div>
-                </article>
-                <div class="pagination-view">
-                    <dl class="prev">
-                        <dt>이전글</dt>
-                        <dd><a href="#">효담상조 공지사항 입니다.</a></dd>
-                    </dl>
-                    <dl class="next">
-                        <dt>다음글</dt>
-                        <dd>다음글이 없습니다.</dd>
-                    </dl>
-                </div>
-                <div class="btn-wrap center">
-                    <a class="linkBtn-list" href="#">목록</a>
-                </div>
             </div>
         </article>
     </main>
