--- a/src/html/sub-introduce-greetings.html
+++ b/src/html/sub-introduce-greetings.html
@@ -2,19 +2,19 @@
 <html lang="ko">
 
 <head>
-    <title>공지사항|회사소개|e효담</title>
+    <title>e효담</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
-    <meta name="title" content="공지사항|회사소개|e효담상조,A+라이프">
+    <meta name="title" content="e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
-    <meta name="description" content="e효담상조 공지사항 페이지 입니다.">
-    <meta property="og:title" content="공지사항|회사소개|e효담상조,A+라이프">
-    <meta property="og:description" content="e효담상조 공지사항 페이지 입니다.">
+    <meta name="description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta property="og:title" content="e효담상조,A+라이프">
+    <meta property="og:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="공지사항|회사소개|e효담상조,A+라이프">
-    <meta name="twitter:description" content="e효담상조 공지사항 페이지 입니다.">
+    <meta name="twitter:title" content="e효담상조,A+라이프">
+    <meta name="twitter:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
     <meta name="twitter:image" content="-">
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
@@ -76,10 +76,10 @@
                         <li class="depth depth2">
                             <button type="button">공지사항</button>
                             <ul class="depth-list">
-                                <li><a href="sub-introduce-greetings.html">인사말</a></li>
+                                <li class="active"><a href="sub-introduce-greetings.html">인사말</a></li>
                                 <li><a href="sub-introduce-history.html">연혁</a></li>
                                 <li><a href="sub-introduce-organization.html">조직도</a></li>
-                                <li class="active"><a href="sub-introduce-noticelist.html">공지사항</a></li>
+                                <li><a href="sub-introduce-noticelist.html">공지사항</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -88,100 +88,11 @@
         </header>
         <article class="contents con-wrap">
             <header class="con-header">
-                <h2>공지사항</h2>
-                <p>효담상조에서 안내드립니다.</p>
+                <h2></h2>
+                <p></p>
             </header>
             <div class="con-body">
-                <table class="board-list">
-                    <caption class="blind">공지사항 목록</caption>
-                    <colgroup>
-                        <col style="width: 83px;">
-                        <col>
-                        <col style="width: 17.5%;">
-                        <col style="width: 9%;">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>No.</th>
-                            <th>제목</th>
-                            <th>등록일</th>
-                            <th>조회수</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <ul class="pagination">
-                    <li class="first dimd"><a href="#">처음으로</a></li>
-                    <li class="prev dimd"><a href="#">이전</a></li>
-                    <li class="active"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li class="next"><a href="#">다음</a></li>
-                    <li class="last"><a href="#">마지막으로</a></li>
-                </ul>
+
             </div>
         </article>
     </main>
