--- a/src/html/sub-introduce-history.html
+++ b/src/html/sub-introduce-history.html
@@ -77,9 +77,9 @@
                             <button type="button">공지사항</button>
                             <ul class="depth-list">
                                 <li><a href="sub-introduce-greetings.html">인사말</a></li>
-                                <li><a href="sub-introduce-history.html">연혁</a></li>
+                                <li class="active"><a href="sub-introduce-history.html">연혁</a></li>
                                 <li><a href="sub-introduce-organization.html">조직도</a></li>
-                                <li class="active"><a href="sub-introduce-noticelist.html">공지사항</a></li>
+                                <li><a href="sub-introduce-noticelist.html">공지사항</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -92,96 +92,6 @@
                 <p>효담상조에서 안내드립니다.</p>
             </header>
             <div class="con-body">
-                <table class="board-list">
-                    <caption class="blind">공지사항 목록</caption>
-                    <colgroup>
-                        <col style="width: 83px;">
-                        <col>
-                        <col style="width: 17.5%;">
-                        <col style="width: 9%;">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>No.</th>
-                            <th>제목</th>
-                            <th>등록일</th>
-                            <th>조회수</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <ul class="pagination">
-                    <li class="first dimd"><a href="#">처음으로</a></li>
-                    <li class="prev dimd"><a href="#">이전</a></li>
-                    <li class="active"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li class="next"><a href="#">다음</a></li>
-                    <li class="last"><a href="#">마지막으로</a></li>
-                </ul>
             </div>
         </article>
     </main>
