--- a/src/html/sub-introduce-noticeview.html
+++ b/src/html/sub-introduce-noticeview.html
@@ -4,7 +4,8 @@
 <head>
     <title>공지사항|회사소개|e효담</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
     <meta name="title" content="공지사항|회사소개|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
     <meta name="description" content="e효담상조 공지사항 페이지 입니다.">
@@ -18,13 +19,11 @@
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/slick.css" />
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/sub.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="../js/slick.min.js"></script>
 </head>
 
 <body>
@@ -43,11 +42,11 @@
         </h1>
         <nav class="gnb">
             <ul>
-                <li><a href="">회사소개</a></li>
-                <li><a href="">상품안내</a></li>
-                <li><a href="">주요고객사</a></li>
-                <li><a href="">이용후기</a></li>
-                <li><a href="">장례정보</a></li>
+                <li><a href="sub-introduce-greetings.html">회사소개</a></li>
+                <li><a href="sub-product.html">상품안내</a></li>
+                <li><a href="sub-customer.html">주요고객사</a></li>
+                <li><a href="sub-review-list.html">이용후기</a></li>
+                <li><a href="sub-funeral-search.html">장례정보</a></li>
             </ul>
         </nav>
         <ul class="util">
@@ -67,20 +66,20 @@
                         <li class="depth depth1">
                             <button type="button">회사소개</button>
                             <ul class="depth-list">
-                                <li class="active"><a href="#">회사소개</a></li>
-                                <li><a href="#">상품안내</a></li>
-                                <li><a href="#">주요고객사</a></li>
-                                <li><a href="#">이용후기</a></li>
-                                <li><a href="#">장례정보</a></li>
+                                <li class="active"><a href="sub-introduce-greetings.html">회사소개</a></li>
+                                <li><a href="sub-product.html">상품안내</a></li>
+                                <li><a href="sub-customer.html">주요고객사</a></li>
+                                <li><a href="sub-review-list.html">이용후기</a></li>
+                                <li><a href="sub-funeral-search.html">장례정보</a></li>
                             </ul>
                         </li>
                         <li class="depth depth2">
                             <button type="button">공지사항</button>
                             <ul class="depth-list">
-                                <li><a href="#">인사말</a></li>
-                                <li><a href="#">연혁</a></li>
-                                <li><a href="#">조직도</a></li>
-                                <li class="active"><a href="#">공지사항</a></li>
+                                <li><a href="sub-introduce-greetings.html">인사말</a></li>
+                                <li><a href="sub-introduce-history.html">연혁</a></li>
+                                <li><a href="sub-introduce-organization.html">조직도</a></li>
+                                <li class="active"><a href="sub-introduce-noticelist.html">공지사항</a></li>
                             </ul>
                         </li>
                     </ul>
