--- a/src/html/sub-review-view.html
+++ b/src/html/sub-review-view.html
@@ -2,19 +2,19 @@
 <html lang="ko">
 
 <head>
-    <title>공지사항|회사소개|e효담</title>
+    <title>이용후기|e효담</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
-    <meta name="title" content="공지사항|회사소개|e효담상조,A+라이프">
+    <meta name="title" content="이용후기|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
-    <meta name="description" content="e효담상조 공지사항 페이지 입니다.">
-    <meta property="og:title" content="공지사항|회사소개|e효담상조,A+라이프">
+    <meta name="description" content="e효담상조 회원님들의 이용후기 입니다.">
+    <meta property="og:title" content="이용후기|e효담상조,A+라이프">
     <meta property="og:description" content="e효담상조 공지사항 페이지 입니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="공지사항|회사소개|e효담상조,A+라이프">
-    <meta name="twitter:description" content="e효담상조 공지사항 페이지 입니다.">
+    <meta name="twitter:title" content="이용후기|e효담상조,A+라이프">
+    <meta name="twitter:description" content="e효담상조 회원님들의 이용후기 입니다.">
     <meta name="twitter:image" content="-">
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
@@ -55,31 +55,28 @@
         </ul>
     </header>
 
-    <main class="content-container introduce">
+    <main class="content-container review">
         <header class="visual">
             <div class="visual-wrap">
-                <h2>회사소개</h2>
-                <p>효담상조는 상주분께서 안정을 되찾으실때까지 모든 준비를 하고 대응하겠습니다.</p>
+                <h2>이용후기</h2>
+                <p>저희 효담을 이용하신 고객님들의 소중한 후기입니다.</p>
                 <nav class="lnb">
                     <ul class="con-wrap">
                         <li class="home"><a href="index.html">home</a></li>
                         <li class="depth depth1">
-                            <button type="button">회사소개</button>
+                            <button type="button">이용후기</button>
                             <ul class="depth-list">
-                                <li class="active"><a href="sub-introduce-greetings.html">회사소개</a></li>
+                                <li><a href="sub-introduce-greetings.html">회사소개</a></li>
                                 <li><a href="sub-product.html">상품안내</a></li>
                                 <li><a href="sub-customer.html">주요고객사</a></li>
-                                <li><a href="sub-review-list.html">이용후기</a></li>
+                                <li class="active"><a href="sub-review-list.html">이용후기</a></li>
                                 <li><a href="sub-funeral-search.html">장례정보</a></li>
                             </ul>
                         </li>
                         <li class="depth depth2">
-                            <button type="button">공지사항</button>
+                            <button type="button">이용후기</button>
                             <ul class="depth-list">
-                                <li><a href="sub-introduce-greetings.html">인사말</a></li>
-                                <li><a href="sub-introduce-history.html">연혁</a></li>
-                                <li><a href="sub-introduce-organization.html">조직도</a></li>
-                                <li class="active"><a href="sub-introduce-noticelist.html">공지사항</a></li>
+                                <li class="active"><a href="sub-review-list.html">이용후기</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -88,100 +85,36 @@
         </header>
         <article class="contents con-wrap">
             <header class="con-header">
-                <h2>공지사항</h2>
-                <p>효담상조에서 안내드립니다.</p>
+                <h2>이용후기</h2>
             </header>
             <div class="con-body">
-                <table class="board-list">
-                    <caption class="blind">공지사항 목록</caption>
-                    <colgroup>
-                        <col style="width: 83px;">
-                        <col>
-                        <col style="width: 17.5%;">
-                        <col style="width: 9%;">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>No.</th>
-                            <th>제목</th>
-                            <th>등록일</th>
-                            <th>조회수</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                        <tr>
-                            <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
-                            <td>2020.07.10</td>
-                            <td>293</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <ul class="pagination">
-                    <li class="first dimd"><a href="#">처음으로</a></li>
-                    <li class="prev dimd"><a href="#">이전</a></li>
-                    <li class="active"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li class="next"><a href="#">다음</a></li>
-                    <li class="last"><a href="#">마지막으로</a></li>
-                </ul>
+                <article class="board-view">
+                    <header class="view-head">
+                        <h3>홍길동 회원님의 효담상조 이용후기</h3>
+                        <ul class="info">
+                            <li>2020.07.10</li>
+                            <li>조회수 293</li>
+                        </ul>
+                    </header>
+                    <div class="view-body">
+                        <div class="center">
+                            <img src="../../assets/images/thumb-boardview.jpg" alt="">
+                        </div>
+                    </div>
+                </article>
+                <div class="pagination-view">
+                    <dl class="prev">
+                        <dt>이전글</dt>
+                        <dd><a href="#">효담상조 공지사항 입니다.</a></dd>
+                    </dl>
+                    <dl class="next">
+                        <dt>다음글</dt>
+                        <dd>다음글이 없습니다.</dd>
+                    </dl>
+                </div>
+                <div class="btn-wrap center">
+                    <a class="linkBtn-list" href="#">목록</a>
+                </div>
             </div>
         </article>
     </main>
