상세페이지 링크추가

--- a/src/html/sub-introduce-noticelist.html
+++ b/src/html/sub-introduce-noticelist.html
@@ -111,61 +111,61 @@
                     <tbody>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td class="tit"><a href="sub-introduce-noticeview.html"">효담상조 공지사항 입니다.</a></td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td class="tit"><a href="sub-introduce-noticeview.html"">효담상조 공지사항 입니다.</a></td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td class="tit"><a href="sub-introduce-noticeview.html"">효담상조 공지사항 입니다.</a></td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td class="tit"><a href="sub-introduce-noticeview.html"">효담상조 공지사항 입니다.</a></td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td class="tit"><a href="sub-introduce-noticeview.html"">효담상조 공지사항 입니다.</a></td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td class="tit"><a href="sub-introduce-noticeview.html"">효담상조 공지사항 입니다.</a></td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td class="tit"><a href="sub-introduce-noticeview.html"">효담상조 공지사항 입니다.</a></td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td class="tit"><a href="sub-introduce-noticeview.html"">효담상조 공지사항 입니다.</a></td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td class="tit"><a href="sub-introduce-noticeview.html"">효담상조 공지사항 입니다.</a></td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">효담상조 공지사항 입니다.</a></td>
+                            <td class="tit"><a href="sub-introduce-noticeview.html"">효담상조 공지사항 입니다.</a></td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
