--- a/src/html/sub-review-list.html
+++ b/src/html/sub-review-list.html
@@ -109,70 +109,70 @@
                     <tbody>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td class="tit"><a href="sub-review-view.html">홍길동 회원님의 효담상조 이용후기</a></td>
                             <td>홍길동 회원</td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td class="tit"><a href="sub-review-view.html">홍길동 회원님의 효담상조 이용후기</a></td>
                             <td>홍길동 회원</td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td class="tit"><a href="sub-review-view.html">홍길동 회원님의 효담상조 이용후기</a></td>
                             <td>홍길동 회원</td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td class="tit"><a href="sub-review-view.html">홍길동 회원님의 효담상조 이용후기</a></td>
                             <td>홍길동 회원</td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td class="tit"><a href="sub-review-view.html">홍길동 회원님의 효담상조 이용후기</a></td>
                             <td>홍길동 회원</td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td class="tit"><a href="sub-review-view.html">홍길동 회원님의 효담상조 이용후기</a></td>
                             <td>홍길동 회원</td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td class="tit"><a href="sub-review-view.html">홍길동 회원님의 효담상조 이용후기</a></td>
                             <td>홍길동 회원</td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td class="tit"><a href="sub-review-view.html">홍길동 회원님의 효담상조 이용후기</a></td>
                             <td>홍길동 회원</td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td class="tit"><a href="sub-review-view.html">홍길동 회원님의 효담상조 이용후기</a></td>
                             <td>홍길동 회원</td>
                             <td>2020.07.10</td>
                             <td>293</td>
                         </tr>
                         <tr>
                             <td>47</td>
-                            <td class="tit"><a href="#">홍길동 회원님의 효담상조 이용후기</a></td>
+                            <td class="tit"><a href="sub-review-view.html">홍길동 회원님의 효담상조 이용후기</a></td>
                             <td>홍길동 회원</td>
                             <td>2020.07.10</td>
                             <td>293</td>
