메인 제휴사 리스트 변경

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -146,7 +146,7 @@
 						<li class="slick-slide"><img src="../../assets/images/logo/25.png" alt="NAVER" /></li>
 						<li class="slick-slide"><img src="../../assets/images/logo/31.png" alt="KBS" /></li>
 						<li class="slick-slide"><img src="../../assets/images/logo/03.png" alt="한국전력공사" /></li>
-						<li class="slick-slide"><img src="../../assets/images/logo/42.png" alt="메리츠화재" /></li>
+						<li class="slick-slide"><img src="../../assets/images/logo/06.png" alt="MetLife" /></li>
 						<li class="slick-slide"><img src="../../assets/images/logo/08.png" alt="posco" /></li>
 						<li class="slick-slide"><img src="../../assets/images/logo/43.png" alt="사학연금" /></li>
 						<li class="slick-slide"><img src="../../assets/images/logo/11.png" alt="IBK기업은행" /></li>
