--- a/src/html/index.html
+++ b/src/html/index.html
@@ -41,11 +41,39 @@
 		</h1>
 		<nav class="gnb">
 			<ul>
-				<li><a href="sub-introduce-greetings.html">회사소개</a></li>
-				<li><a href="sub-product.html">상품안내</a></li>
+				<li>
+					<a href="sub-introduce-greetings.html">회사소개</a>
+					<ul class="sub-depth">
+						<li><a href="sub-introduce-greetings.html">인사말</a></li>
+						<li><a href="sub-introduce-history.html">연혁</a></li>
+						<li><a href="sub-introduce-organization.html">조직도</a></li>
+						<li><a href="sub-introduce-noticelist.html">공지사항</a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="sub-product.html">상품안내</a>
+					<ul class="sub-depth">
+						<li><a href="sub-product.html">HD90</a></li>
+						<li><a href="sub-product.html">HD149</a></li>
+					</ul>
+				</li>
 				<li><a href="sub-customer.html">주요고객사</a></li>
-				<li><a href="sub-review-list.html">이용후기</a></li>
-				<li><a href="sub-funeral-search.html">장례정보</a></li>
+				<li>
+					<a href="sub-review-list.html">이용후기</a>
+					<ul class="sub-depth">
+						<li><a href="sub-review-list.html">이용후기</a></li>
+						<!-- 갤러리 추가 예정 -->
+					</ul>
+				</li>
+				<li>
+					<a href="sub-funeral-search.html">장례정보</a>
+					<ul class="sub-depth">
+						<li><a href="sub-funeral-search.html">장사시설검색</a></li>
+						<li><a href="sub-funeral-after.html">사후행정절차</a></li>
+						<li><a href="sub-funeral-info.html">장례정보</a></li>
+						<li><a href="sub-funeral-notice.html">부고알림</a></li>
+					</ul>
+				</li>
 			</ul>
 		</nav>
 		<ul class="util">
