--- a/src/html/sub-customer.html
+++ b/src/html/sub-customer.html
@@ -2,19 +2,19 @@
 <html lang="ko">
 
 <head>
-    <title>e효담</title>
+    <title>주요고객사|e효담</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
-    <meta name="title" content="e효담상조,A+라이프">
+    <meta name="title" content="주요고객사|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
-    <meta name="description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
-    <meta property="og:title" content="e효담상조,A+라이프">
-    <meta property="og:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="description" content="효담과 함께하는 제휴 및 고객사 분들 입니다.">
+    <meta property="og:title" content="주요고객사|e효담상조,A+라이프">
+    <meta property="og:description" content="효담과 함께하는 제휴 및 고객사 분들 입니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="e효담상조,A+라이프">
-    <meta name="twitter:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="twitter:title" content="주요고객사|e효담상조,A+라이프">
+    <meta name="twitter:description" content="효담과 함께하는 제휴 및 고객사 분들 입니다.">
     <meta name="twitter:image" content="-">
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
@@ -58,8 +58,8 @@
     <main class="content-container customer">
         <header class="visual">
             <div class="visual-wrap">
-                <h2>상품안내</h2>
-                <p>고객님들께 품격있는 서비스를 드리기 위해 준비한 효담상조 상품안내입니다.</p>
+                <h2>주요고객사</h2>
+                <p>저희 효담과 함께하는 제휴 업체 및 고객사 분들입니다. <br />B2B 기업 장례실적 1년 기준 (총 7,930건)</p>
                 <nav class="lnb">
                     <ul class="con-wrap">
                         <li class="home"><a href="index.html">home</a></li>
@@ -79,11 +79,66 @@
         </header>
         <article class="contents con-wrap">
             <header class="con-header">
-                <h2></h2>
-                <p></p>
+                <h2>기업 및 단체 제휴부분 상조업계의 Leading company</h2>
+                <p>공공기관, 금융회사,일반기업 포함 총 250여개 법인 상조서비스 제휴 체결</p>
             </header>
             <div class="con-body">
-
+                <ul class="company-list">
+                    <li><img src="../../assets/images/logo/01.png" alt="삼성전자"></li>
+                    <li><img src="../../assets/images/logo/02.png" alt="KIA"></li>
+                    <li><img src="../../assets/images/logo/03.png" alt="한국전력공사"></li>
+                    <li><img src="../../assets/images/logo/04.png" alt="롯데백화점"></li>
+                    <li><img src="../../assets/images/logo/05.png" alt="LG디스플레이"></li>
+                    <li><img src="../../assets/images/logo/06.png" alt="MetLife"></li>
+                    <li><img src="../../assets/images/logo/07.png" alt="삼성SDI"></li>
+                    <li><img src="../../assets/images/logo/08.png" alt="POSCO"></li>
+                    <li><img src="../../assets/images/logo/09.png" alt="한국수력자원"></li>
+                    <li><img src="../../assets/images/logo/10.png" alt="LOTTE CHEMICAL"></li>
+                    <li><img src="../../assets/images/logo/11.png" alt="IBK기업은행"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="우리은행"></li>
+                    <li><img src="../../assets/images/logo/13.png" alt="삼성증권"></li>
+                    <li><img src="../../assets/images/logo/31.png" alt="KBS"></li>
+                    <li><img src="../../assets/images/logo/15.png" alt="한국서부발전|주|"></li>
+                    <li><img src="../../assets/images/logo/16.png" alt="대홍기획"></li>
+                    <li><img src="../../assets/images/logo/17.png" alt="한국투자증권"></li>
+                    <li><img src="../../assets/images/logo/18.png" alt="CHUBB"></li>
+                    <li><img src="../../assets/images/logo/19.png" alt="삼성 에스원"></li>
+                    <li><img src="../../assets/images/logo/20.png" alt="한국무역협회"></li>
+                    <li><img src="../../assets/images/logo/21.png" alt="한국남동발전"></li>
+                    <li><img src="../../assets/images/logo/28.png" alt="롯데카드"></li>
+                    <li><img src="../../assets/images/logo/23.png" alt="KEB하나은행"></li>
+                    <li><img src="../../assets/images/logo/24.png" alt="DB생명"></li>
+                    <li><img src="../../assets/images/logo/25.png" alt="NAVER"></li>
+                    <li><img src="../../assets/images/logo/26.png" alt="KRX한국거래소"></li>
+                    <li><img src="../../assets/images/logo/27.png" alt="한국중부발전"></li>
+                    <li><img src="../../assets/images/logo/22.png" alt="롯데손해보험"></li>
+                    <li><img src="../../assets/images/logo/29.png" alt="BCcard"></li>
+                    <li><img src="../../assets/images/logo/30.png" alt="DB손해보험"></li>
+                    <li><img src="../../assets/images/logo/34.png" alt="한화생명"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="경희대학교총동문회"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="한국남부발전"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="롯데하이마트"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="수협"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="흥국생명"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="한화손해보험"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="KOMOSCO 한국조폐공사"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="한진산업개발"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="KOREAN AIR"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="DGB생명"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="메리츠화재"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="한화손해사정"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="대한적십자"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="한국전력기술"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="사학연금"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="대신증권"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="MG손해보험"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="한화호텔&리조트"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="GS건설"></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="한국전력전우회""></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="KMA 한국능률협회""></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="동양생명""></li>
+                    <li><img src="../../assets/images/logo/12.png" alt="ABL""></li>
+                </ul>
             </div>
         </article>
     </main>
