gnb 서브 추가중

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,6 +27,7 @@
 
 <body>
 	<header class="header">
+		<button class="btn-menu" type="button"><span>menu</span></button>
 		<h1 class="logo">
 			<a href="index.html">
 				<span class="white">
@@ -40,7 +41,7 @@
 			</a>
 		</h1>
 		<nav class="gnb">
-			<ul>
+			<ul class="gnb-top">
 				<li>
 					<a href="sub-introduce-greetings.html">회사소개</a>
 					<ul class="sub-depth">
@@ -52,18 +53,10 @@
 				</li>
 				<li>
 					<a href="sub-product.html">상품안내</a>
-					<ul class="sub-depth">
-						<li><a href="sub-product.html">HD90</a></li>
-						<li><a href="sub-product.html">HD149</a></li>
-					</ul>
 				</li>
 				<li><a href="sub-customer.html">주요고객사</a></li>
 				<li>
 					<a href="sub-review-list.html">이용후기</a>
-					<ul class="sub-depth">
-						<li><a href="sub-review-list.html">이용후기</a></li>
-						<!-- 갤러리 추가 예정 -->
-					</ul>
 				</li>
 				<li>
 					<a href="sub-funeral-search.html">장례정보</a>
@@ -72,8 +65,16 @@
 						<li><a href="sub-funeral-after.html">사후행정절차</a></li>
 						<li><a href="sub-funeral-info.html">장례정보</a></li>
 						<li><a href="sub-funeral-notice.html">부고알림</a></li>
+						<li><a href="sub-funeral-permomance.html">장례 수행 실적</a></li>
 					</ul>
 				</li>
+			</ul>
+			<ul class="fnb">
+				<li><a href="#">개인정보처리방침</a></li>
+				<li><a href="#">홈페이지이용약관</a></li>
+				<li><a href="#">이메일무단수집거부</a></li>
+				<li><a href="#">중요정보고시</a></li>
+				<li><a href="#">부가서비스</a></li>
 			</ul>
 		</nav>
 		<ul class="util">
