* gnb 메뉴명 수정 장례정보 > 종교별장례안내 * gnb, lnb 장례수행실적 링크 수정 * 주요고객사, 상품안내, 사후행정절차, 장례정보 pc 작업완료

--- a/src/html/sub-customer.html
+++ b/src/html/sub-customer.html
@@ -64,9 +64,9 @@
 					<ul class="sub-depth">
 						<li><a href="sub-funeral-search.html">장사시설검색</a></li>
 						<li><a href="sub-funeral-after.html">사후행정절차</a></li>
-						<li><a href="sub-funeral-info.html">장례정보</a></li>
+						<li><a href="sub-funeral-info.html">종교별장례안내</a></li>
 						<li><a href="sub-funeral-notice.html">부고알림</a></li>
-						<li><a href="sub-funeral-permomance.html">장례 수행 실적</a></li>
+						<li><a href="sub-funeral-performance.html">장례수행실적</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -93,7 +93,7 @@
                     <ul class="con-wrap">
                         <li class="home"><a href="index.html">home</a></li>
                         <li class="depth depth1">
-                            <button type="button">회사소개</button>
+                            <button type="button">주요고객사</button>
                             <ul class="depth-list">
                                 <li><a href="sub-introduce-greetings.html">회사소개</a></li>
                                 <li><a href="sub-product.html">상품안내</a></li>
@@ -144,29 +144,29 @@
                     <li><img src="../../assets/images/logo/29.png" alt="BCcard"></li>
                     <li><img src="../../assets/images/logo/30.png" alt="DB손해보험"></li>
                     <li><img src="../../assets/images/logo/34.png" alt="한화생명"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="경희대학교총동문회"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="한국남부발전"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="롯데하이마트"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="수협"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="흥국생명"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="한화손해보험"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="KOMOSCO 한국조폐공사"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="한진산업개발"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="KOREAN AIR"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="DGB생명"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="메리츠화재"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="한화손해사정"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="대한적십자"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="한국전력기술"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="사학연금"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="대신증권"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="MG손해보험"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="한화호텔&리조트"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="GS건설"></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="한국전력전우회""></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="KMA 한국능률협회""></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="동양생명""></li>
-                    <li><img src="../../assets/images/logo/12.png" alt="ABL""></li>
+                    <li><img src="../../assets/images/logo/55.png" alt="경희대학교총동문회"></li>
+                    <li><img src="../../assets/images/logo/33.png" alt="한국남부발전"></li>
+                    <li><img src="../../assets/images/logo/lotte-himart.png" alt="롯데하이마트"></li>
+                    <li><img src="../../assets/images/logo/35.png" alt="수협"></li>
+                    <li><img src="../../assets/images/logo/36.png" alt="흥국생명"></li>
+                    <li><img src="../../assets/images/logo/40.png" alt="한화손해보험"></li>
+                    <li><img src="../../assets/images/logo/38.png" alt="KOMOSCO 한국조폐공사"></li>
+                    <li><img src="../../assets/images/logo/39.png" alt="한전산업개발"></li>
+                    <li><img src="../../assets/images/logo/37.png" alt="KOREAN AIR"></li>
+                    <li><img src="../../assets/images/logo/41.png" alt="DGB생명"></li>
+                    <li><img src="../../assets/images/logo/42.png" alt="메리츠화재"></li>
+                    <li><img src="../../assets/images/logo/46.png" alt="한화손해사정"></li>
+                    <li><img src="../../assets/images/logo/44.png" alt="대한적십자"></li>
+                    <li><img src="../../assets/images/logo/45.png" alt="한국전력기술"></li>
+                    <li><img src="../../assets/images/logo/43.png" alt="사학연금"></li>
+                    <li><img src="../../assets/images/logo/47.png" alt="대신증권"></li>
+                    <li><img src="../../assets/images/logo/48.png" alt="MG손해보험"></li>
+                    <li><img src="../../assets/images/logo/52.png" alt="한화호텔&리조트"></li>
+                    <li><img src="../../assets/images/logo/50.png" alt="GS건설"></li>
+                    <li><img src="../../assets/images/logo/51.png" alt="한국전력전우회""></li>
+                    <li><img src="../../assets/images/logo/49.png" alt="KMA 한국능률협회""></li>
+                    <li><img src="../../assets/images/logo/53.png" alt="동양생명""></li>
+                    <li><img src="../../assets/images/logo/54.png" alt="ABL""></li>
                 </ul>
             </div>
         </article>
