--- a/src/html/sub-funeral-search.html
+++ b/src/html/sub-funeral-search.html
@@ -64,9 +64,9 @@
 					<ul class="sub-depth">
 						<li><a href="sub-funeral-search.html">장사시설검색</a></li>
 						<li><a href="sub-funeral-after.html">사후행정절차</a></li>
-						<li><a href="sub-funeral-info.html">장례정보</a></li>
+						<li><a href="sub-funeral-info.html">종교별장례안내</a></li>
 						<li><a href="sub-funeral-notice.html">부고알림</a></li>
-						<li><a href="sub-funeral-permomance.html">장례 수행 실적</a></li>
+						<li><a href="sub-funeral-performance.html">장례수행실적</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -107,8 +107,9 @@
                             <ul class="depth-list">
                                 <li class="active"><a href="sub-funeral-search.html">장사시설검색</a></li>
                                 <li><a href="sub-funeral-after.html">사후행정절차</a></li>
-                                <li><a href="sub-funeral-info.html">장례정보</a></li>
+                                <li><a href="sub-funeral-info.html">종교별장례안내</a></li>
                                 <li><a href="sub-funeral-notice.html">부고알림</a></li>
+                                <li><a href="sub-funeral-performance.html">장례수행실적</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -263,7 +264,7 @@
                         </select>
                     </div>
                     <table class="board-list">
-                        <caption class="blind">화장장 시설 목록</caption>
+                        <caption class="blind">봉안당 시설 목록</caption>
                         <colgroup>
                             <col style="width: 83px;">
                             <col>
@@ -370,7 +371,7 @@
                         </select>
                     </div>
                     <table class="board-list">
-                        <caption class="blind">화장장 시설 목록</caption>
+                        <caption class="blind">공원묘지 시설 목록</caption>
                         <colgroup>
                             <col style="width: 83px;">
                             <col>
@@ -477,7 +478,7 @@
                         </select>
                     </div>
                     <table class="board-list">
-                        <caption class="blind">화장장 시설 목록</caption>
+                        <caption class="blind">자연장 시설 목록</caption>
                         <colgroup>
                             <col style="width: 83px;">
                             <col>
