--- a/src/html/index.html
+++ b/src/html/index.html
@@ -63,9 +63,9 @@
 					<ul class="sub-depth">
 						<li><a href="sub-funeral-search.html">장사시설검색</a></li>
 						<li><a href="sub-funeral-after.html">사후행정절차</a></li>
-						<li><a href="sub-funeral-info.html">장례정보</a></li>
+						<li><a href="sub-funeral-info.html">종교별장례안내</a></li>
 						<li><a href="sub-funeral-notice.html">부고알림</a></li>
-						<li><a href="sub-funeral-permomance.html">장례 수행 실적</a></li>
+						<li><a href="sub-funeral-performance.html">장례수행실적</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -209,13 +209,13 @@
 				<ul>
 					<li>
 						<a href="">
-							<h4><em>무빈소 간소한 장례</em><strong>HD90</strong></h4>
+							<h4><em>무빈소 간소한 장례</em><strong>e효담90</strong></h4>
 							<p>자세히보기</p>
 						</a>
 					</li>
 					<li>
 						<a href="">
-							<h4><em>알뜰한 실속 장례</em><strong>HD149</strong></h4>
+							<h4><em>알뜰한 실속 장례</em><strong>e효담149</strong></h4>
 							<p>자세히보기</p>
 						</a>
 					</li>
