--- a/src/html/sub-review-view.html
+++ b/src/html/sub-review-view.html
@@ -64,9 +64,9 @@
 					<ul class="sub-depth">
 						<li><a href="sub-funeral-search.html">장사시설검색</a></li>
 						<li><a href="sub-funeral-after.html">사후행정절차</a></li>
-						<li><a href="sub-funeral-info.html">장례정보</a></li>
+						<li><a href="sub-funeral-info.html">종교별장례안내</a></li>
 						<li><a href="sub-funeral-notice.html">부고알림</a></li>
-						<li><a href="sub-funeral-permomance.html">장례 수행 실적</a></li>
+						<li><a href="sub-funeral-performance.html">장례수행실적</a></li>
 					</ul>
 				</li>
 			</ul>
