장례수행실적 페이지 pc 작업완료

--- a/src/html/sub-funeral-info.html
+++ b/src/html/sub-funeral-info.html
@@ -2,18 +2,18 @@
 <html lang="ko">
 
 <head>
-    <title>종교별 장례|장례정보|e효담</title>
+    <title>종교별장례안내|장례정보|e효담</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
-    <meta name="title" content="종교별 장례|장례정보|e효담상조,A+라이프">
+    <meta name="title" content="종교별장례안내|장례정보|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
     <meta name="description" content="종교별 장례 방식에 대한 다양한 정보를 안내해드립니다.">
-    <meta property="og:title" content="종교별 장례|장례정보|e효담상조,A+라이프">
+    <meta property="og:title" content="종교별장례안내|장례정보|e효담상조,A+라이프">
     <meta property="og:description" content="종교별 장례 방식에 대한 다양한 정보를 안내해드립니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="종교별 장례|장례정보|e효담상조,A+라이프">
+    <meta name="twitter:title" content="종교별장례안내|장례정보|e효담상조,A+라이프">
     <meta name="twitter:description" content="종교별 장례 방식에 대한 다양한 정보를 안내해드립니다.">
     <meta name="twitter:image" content="">
     <meta name="twitter:card" content="summary_large_image">
