회사소개 인사말 작업

--- a/src/html/sub-introduce-greetings.html
+++ b/src/html/sub-introduce-greetings.html
@@ -2,19 +2,19 @@
 <html lang="ko">
 
 <head>
-    <title>e효담</title>
+    <title>인사말|회사소개|e효담</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
-    <meta name="title" content="e효담상조,A+라이프">
+    <meta name="title" content="인사말|회사소개|e효담상조,A+라이프">
     <meta name="keywords" content="e효담,효담,효담상조, A⁺라이프, 상조, 상조회사, 장례">
-    <meta name="description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
-    <meta property="og:title" content="e효담상조,A+라이프">
-    <meta property="og:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="description" content="고객을 최우선으로 생각하는 TOTAL LIFE CARE SERVICE를 약속 드립니다.">
+    <meta property="og:title" content="인사말|회사소개|e효담상조,A+라이프">
+    <meta property="og:description" content="고객을 최우선으로 생각하는 TOTAL LIFE CARE SERVICE를 약속 드립니다.">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-    <meta name="twitter:title" content="e효담상조,A+라이프">
-    <meta name="twitter:description" content="정직하고 착한 상조회사 e효담에 오신것을 환영합니다.">
+    <meta name="twitter:title" content="인사말|회사소개|e효담상조,A+라이프">
+    <meta name="twitter:description" content="고객을 최우선으로 생각하는 TOTAL LIFE CARE SERVICE를 약속 드립니다.">
     <meta name="twitter:image" content="-">
     <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
@@ -103,7 +103,7 @@
                             </ul>
                         </li>
                         <li class="depth depth2">
-                            <button type="button">공지사항</button>
+                            <button type="button">인사말</button>
                             <ul class="depth-list">
                                 <li class="active"><a href="sub-introduce-greetings.html">인사말</a></li>
                                 <li><a href="sub-introduce-history.html">연혁</a></li>
@@ -117,11 +117,58 @@
         </header>
         <article class="contents con-wrap">
             <header class="con-header">
-                <h2></h2>
-                <p></p>
+                <h2>인사말</h2>
+                <p>고객을 최우선으로 생각하는 TOTAL LIFE CARE SERVICE를 약속 드립니다.</p>
             </header>
-            <div class="con-body">
-
+            <div class="con-body greetings">
+                <div class="first-txt-box">
+                    <div class="img-box">
+                        <img src="../../assets/images/visual/sub-introduce-greeting.png" alt="A+라이프 효담 대표이사 사진">
+                    </div>
+                    <div class="txt-box">
+                        <p>
+                            <strong>
+                                안녕하십니까?<br />
+                                A+라이프 효담 대표이사 박성수 입니다.
+                            </strong>
+                        </p>
+                        <p>
+                            현재 우리나라는 65세 이상 고령인구의 증가속도가 세계에서 유래를 찾아보기 어려울 만큼<br />
+                            빠르게 진행되고 있습니다. 장례문화에도 빠른 변화의 바람이 불고 있고 이제는 품격과 더불어,<br />
+                            거품을 없앤 간소한 장례가 자리를 잡아가고 있습니다.
+                        </p>
+                    </div>
+                    <div class="bg-txt-box">
+                        <p>
+                            그래서 금번에 A+라이프 효담에서는<br />
+                            잘못된 장례문화를 바로 잡고, 불필요한 허례허식을 줄이는 목적으로<br />
+                            <strong>후불식 온라인 상조인 'e효담'을 런칭 하였습니다.</strong>
+                        </p>
+                    </div>
+                </div>
+                <p>
+                    부고 연락을 받고 조문을 많이 가보셨겠지만 막상 나의 일이 된다고는 생각해 보지는 않으셨을 겁니다.<br />
+                    지금 상주가 되면 무엇을 어떻게 해야 할지를 몰라서 막막하고 두렵기도 하고 또 갑작스럽게 임종을 맞이 해야 하는 경우에는<br />
+                    복잡한 장례절차와 예법을 몰라서 과다한 장례비용 등에 놀라실 수도 있습니다. 
+                </p>
+                <p class="line-txt-box">
+                    상조회사 중 가장<br />
+                    <strong>튼튼한 회사, 가장 정직한 회사, 가장 믿을 만한 회사, 가장 착한 회사</strong>인 A+라이프 효담은<br />
+                    수고비, 노잣돈을 일절 받지 않고, 오직 정품만을 사용 하는 등 <strong>업계 최초로 5대 품질 보증제도</strong>를 도입하였고<br />
+                    이를 바탕으로 전직 국무총리 사회장, 그룹 창업주 회사장 등 VIP 장례와 삼성전자, 기아자동차, 네이버, KBS 등 250여개 기업의 장례행사도<br />
+                    진행 하면서 많은 고객들에게 최고의 만족도를 제공하고 있습니다.
+                </p>
+                <p class="last-txt-box">
+                    <em>A+라이프 효담의 후불식 온라인 상조인 'e효담' 의 장례서비스를 이용하신다면</em><br />
+                    저렴한 가격과 좋은 품질로 임직원 모두가 열과 성을 다하여 유가족의 슬픔을 진심으로 위로 해드리고<br />
+                    고인이 걸어오신 숭고하고 고귀한 삶을 매듭지어야 함에 있어서,<br />
+                    한치의 소홀함도 없이 효와 정성을 담아 최선을 다할 것을 약속드립니다.
+                </p>
+                <p class="txt-right">감사합니다.</p>
+                <p class="sign-box">
+                    <em>(주)에이플러스라이프 대표이사 사장</em>
+                    <img src="../../assets/images/visual/sub-introduce-sign.png" alt="">
+                </p>
             </div>
         </article>
     </main>
